[package]
name = "humidity-graph"
version = "0.1.0"
authors = ["Borodin Gregory <grihabor@gmail.com>"]
edition = "2021"
license = "MIT"

[[bin]]
name = "humidity-graph"
test = false
bench = false

[[bin]]
name = "hc-05-serial"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.2.0"
nb = "0.1.2"
embedded-hal = "0.2.3"
dht11 = "0.3.1"
avr-device = "0.5.3"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "190f2c3cb8d29e10f71119352b912369dc5a1fb7"
features = ["arduino-mega2560"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
